fixed footer overlap issue
This caused the footer to block the reports on mobile devices. It now drops to the absolute bottom while there are no reports but stays underneath the reports once created.

--- a/styles/finance.css
+++ b/styles/finance.css
@@ -17,9 +17,6 @@
 	--table-cat-txt: var(--report);
 }
 
-footer {
-	position: absolute;
-	bottom: 0;
 section {
 	margin: 2rem;
 	
@@ -92,4 +89,9 @@ table {
 		}
 	}
 }
+:not(:has(report)) {
+	footer {
+		position: absolute;
+		bottom: 0;
+	}
 }
